# luasdl2

./: .hgignore  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  README  README.md  lua-sdl2-scm-1.rockspec  lua-sdl2-scm-2.rockspec  lua-sdl2-scm-3.rockspec
cmake/: FindLua.cmake  FindLua52.cmake  FindLuaJIT.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  FindSysQueue.cmake  config.h.in
common/: CMakeLists.txt  array.c  array.h  common.c  common.h  rwops.c  rwops.h  surface.c  surface.h  table.c  table.h  variant.c  variant.h  video.c  video.h
convert/: extract.lua  note.txt
doc/: 01-initialization.tgz  02-window.tgz  03-events.tgz  04-drawing.tgz  05-sound.tgz  06-text.tgz  07-bouncing.tgz  index.html
examples/: CMakeLists.txt
examples/audio/: audio-processor.lua  audio.lua
examples/font/: font.lua
examples/image/: image.lua
examples/joystick/: joystick.lua
examples/keyboard/: keyboard.lua
examples/paths/: paths.lua
examples/rwops/: rwops.lua
examples/tcp/: client.lua  server.lua
examples/threads/: channel.lua
examples/udp/: client.lua  server.lua
rocks/: config.h
sdl-image/: CMakeLists.txt
sdl-image/src/: image.c
sdl-mixer/: CMakeLists.txt
sdl-mixer/src/: mixer.c
sdl-net/: CMakeLists.txt
sdl-net/src/: net.c
sdl-ttf/: CMakeLists.txt
sdl-ttf/src/: ttf.c
src/: SDL.c  audio.c  audio.h  channel.c  channel.h  clipboard.c  clipboard.h  cpu.c  cpu.h  display.c  display.h  events.c  events.h  filesystem.c  filesystem.h  gamecontroller.c  gamecontroller.h  gl.c  gl.h  haptic.c  haptic.h  joystick.c  joystick.h  keyboard.c  keyboard.h  logging.c  logging.h  mouse.c  mouse.h  platform.c  platform.h  power.c  power.h  rectangle.c  rectangle.h  renderer.c  renderer.h  texture.c  texture.h  thread.c  (+7 more)
tutorials/: CMakeLists.txt
tutorials/01-initialization/: tutorial.lua
tutorials/02-window/: tutorial.lua
tutorials/03-events/: tutorial.lua
tutorials/04-drawing/: tutorial.lua
tutorials/05-sound/: tutorial.lua
tutorials/06-text/: tutorial.lua
tutorials/07-bouncing/: tutorial.lua
tutorials/08-keyboardControl/: KeyboardControl.lua
tutorials/09-modules/: main.lua  windowModule.lua
tutorials/10-joystickControl/: joyMove.lua
windows/: CMakeLists.txt
